--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <span class="v86_209">RubySoft</span>
                 <div class="v86_210">
                     <span class="v86_212">Nuestros Planes</span>
-                    <span class="v86_213">Contactanos </span>
+                    <span class="v86_213">Contactanos por nuestras redes sociales </span>
                     <span class="v86_214">Sobre Nosotros</span>
                 </div><span class="v97_2297">Home</span>
             </div><div class="v84_348"></div>
             <div class="v86_585">
-                <span class="v86_586">Sobre Nosotros</span>
+                <span class="v86_586">Sobre Nosotrs</span>
             </div><div class="v86_995"><span class="v86_996">Sobre Nosotros</span>
                 <div class="v86_997"></div>
                 <div class="name"></div>
